# msopprof

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  README_EN.md  build.py  dependencies.json  download_dependencies.py
csrc/: CMakeLists.txt
csrc/op_profiling/: CMakeLists.txt  main.cpp
csrc/op_profiling/argparser/: arg_checker.cpp  arg_checker.h  arg_normalize.cpp  arg_normalize.h  options.h  parser.h  result.h  tokens.h  utils.h
csrc/op_profiling/common/: CMakeLists.txt  dbi_defs.h  defs.h  hal_helper.cpp  hal_helper.h  prof_args.cpp  prof_args.h  runtime_helper.cpp  runtime_helper.h  visualize.cpp  visualize.h
csrc/op_profiling/communication/: communication.cpp  communication.h  serializer.h
csrc/op_profiling/instr_encoding/: CMakeLists.txt  instr_encoding.cpp  instr_encoding.h
csrc/op_profiling/instr_encoding/encodingA2/: CubeInstrTableA2.h  DMAInstrTableA2.h  FCInstrTable2A2.h  FCInstrTableA2.h  OtherInstrTableA2.h  SIMDInstrTableA2.h  ScalarInstrTableA2.h
csrc/op_profiling/instr_encoding/encodingA5/: CubeInstrTableA5.h  DMAInstrTableA5.h  FCInstrTable2A5.h  FCInstrTableA5.h  SIMDInstrTableA5.h  ScalarInstrTableA5.h  VectorInstrTableA5.h
csrc/op_profiling/interface/: cli_logo.cpp  cli_logo.h  ms_op_prof.cpp  ms_op_prof.h
csrc/op_profiling/parse/: CMakeLists.txt
csrc/op_profiling/parse/data_calculator/: CMakeLists.txt  compute_load_calculator.cpp  compute_load_calculator.h  mte_log_calculator.cpp  mte_log_calculator.h
csrc/op_profiling/parse/data_calculator/instr_detail_calculator/: CMakeLists.txt  gpr_live_register_calculator.cpp  gpr_live_register_calculator.h  instr_detail_calculator.cpp  instr_detail_calculator.h  instr_detail_defs.h  instr_detail_utils.cpp  instr_detail_utils.h  process_bytes_calculator.cpp  process_bytes_calculator.h  scalar_calculate.cpp  scalar_calculator.h  ub_conflict_calculator.cpp  ub_conflict_calculator.h  vector_utilization_calculator.cpp  vector_utilization_calculator.h
csrc/op_profiling/parse/data_center/: data_center.cpp  data_center.h  data_stream.h
csrc/op_profiling/parse/data_parser/: real_time_data_parser.cpp  real_time_data_parser.h  sim_data_parser.h  sim_data_parser_config.h  sim_dump_parser.cpp  sim_dump_parser.h
csrc/op_profiling/parse/data_parser/cache_parser/: icache_parser.cpp  icache_parser.h
csrc/op_profiling/parse/data_parser/ccu_parser/: ccu_log_parser.cpp  ccu_log_parser.h
csrc/op_profiling/parse/data_parser/instr_parser/: instr_log_parser.cpp  instr_log_parser.h  instr_parser.cpp  (+5 more)
csrc/op_profiling/parse/data_table/: cache_detail_table.h  data_table.h  instr_detail_table.cpp  instr_detail_table.h  mte_throughput_table.h
csrc/op_profiling/parse/data_visualizer/: sim_data_visualizer.h  sim_visualizer_config.h  utility.cpp  utility.h
csrc/op_profiling/parse/plugin/: base_context.h  plugin_interface.cpp  plugin_interface.h  plugin_manager.h
csrc/op_profiling/plugin/: CMakeLists.txt  defs.h  utils.h
csrc/op_profiling/plugin/instr_prof/: CMakeLists.txt
csrc/op_profiling/plugin/instr_prof_end/: CMakeLists.txt  instrprof_dynamic_bind.cpp
csrc/op_profiling/plugin/instr_prof_start/: CMakeLists.txt  instrprof_dynamic_bind.cpp
csrc/op_profiling/plugin/memory_chart/: CMakeLists.txt  dynamic_bind.cpp  recoder.h  record_dma_mov.h  record_load.h  record_mov_align.h  record_mov_fp.h  record_simt.h
csrc/op_profiling/plugin/operand_record/: CMakeLists.txt  dynamic_bind.cpp  recorder.h
csrc/op_profiling/plugin/warp_timeline/: CMakeLists.txt  dynamic_bind.cpp  recorder.h
csrc/op_profiling/prof_injection/: CMakeLists.txt  device_process_manager.cpp  device_process_manager.h  injection_event.cpp  injection_event.h  packet.cpp  packet.h
csrc/op_profiling/profiling/: op_prof.cpp  op_prof.h  op_prof_data_parse.cpp  op_prof_data_parse.h  op_prof_task.cpp  op_prof_task.h
csrc/op_profiling/profiling/device/: op_device_prof.cpp  op_device_prof.h
csrc/op_profiling/profiling/simulator/: op_sim_prof.cpp  op_sim_prof.h
csrc/op_runner/: CMakeLists.txt  op_runner.cpp  op_runner.h
csrc/op_runner/runner_impl/: CMakeLists.txt  exec_binary_runner.cpp  exec_binary_runner.h
csrc/utils/cpputils/: CMakeLists.txt  ascend_helper.cpp  ascend_helper.h  cmd_execute.cpp  cmd_execute.h  csv_parser.cpp  csv_parser.h  data_format.h  data_save.cpp  data_save.h  filesystem.cpp  filesystem.h  json_defs.h  json_parser.cpp  json_parser.h  log.cpp  log.h  number_operation.h  pc_process.cpp  pc_process.h  regex_gen.h  singleton.h  smart_pointer.h  thread_pool.cpp  thread_pool.h  thread_safe_unordered_map.h  timer.cpp  timer.h  umask_guard.h  ustring.cpp  ustring.h
test/: CMakeLists.txt  generate_coverage.sh
test/init_scripts/: generate_add_custom_data.py  generate_matmul_leakyrelu_custom_data.py  generate_op_profiling_device_data.py  generate_pc_sampling.py
test/ut/: CMakeLists.txt
test/ut/op_profiling/: CMakeLists.txt
test/ut/op_profiling/argparser/: test_arg_checker.cpp  test_options.cpp  test_parser.cpp  test_result.cpp  test_tokens.cpp
test/ut/op_profiling/common/: test_hal_helper.cpp  test_prof_args.cpp
test/ut/op_profiling/communication/: test_communication.cpp
test/ut/op_profiling/interface/: test_interface.cpp
test/ut/op_profiling/parse/: test_data_center.cpp
test/ut/op_profiling/prof_injection/: test_injection_event.cpp  test_packet.cpp  test_process_manager.cpp
test/ut/op_profiling/profiling/: test_aicoretimestamp.cpp  test_biu_timeline.cpp  test_device.cpp  test_device_scalar.cpp  test_op_prof.cpp  test_roofline.cpp  test_simulator.cpp  test_visualize.cpp
test/ut/op_runner/: CMakeLists.txt  test_op_runner.cpp
test/ut/resources/config_json/: test_dtype.json  test_nodesc.json  test_normal.json  test_shape.json
test/ut/utils/cpputils/: CMakeLists.txt  test_ascend_helper.cpp  test_cmd_execute.cpp  test_data_save.cpp  test_filesystem.cpp  test_future.cpp  test_json_parser.cpp  test_log.cpp  test_number_operation.cpp  test_string.cpp  test_thread_pool.cpp  test_thread_safe_unordered_map.cpp  test_timer.cpp
test/ut/utils/pyutils/: test_check_helper.py  test_utils.py
(+197 files in other folders)
