add_library(instrprofstart_dynamic_bind STATIC instrprof_dynamic_bind.cpp)
target_include_directories(instrprofstart_dynamic_bind PUBLIC ${MSOPSCOMMON_DIR})
target_include_directories(instrprofstart_dynamic_bind PUBLIC ${MSOPT_THIRDPARTY_INCLUDE})
target_include_directories(instrprofstart_dynamic_bind PUBLIC ${ROOT_DIR}/csrc/op_profiling)
if (DEFINED HITEST AND HITEST STREQUAL "ON")
    message(STATUS "HITEST is enabled. Skipping the alternative code block.")
else()
    add_subdirectory(instr_prof_stub)
endif()
