add_library(dynamic_bind_warptimeline STATIC dynamic_bind.cpp)
target_include_directories(dynamic_bind_warptimeline PUBLIC ${MSOPSCOMMON_DIR})
target_include_directories(dynamic_bind_warptimeline PUBLIC ${MSOPT_THIRDPARTY_INCLUDE})
target_include_directories(dynamic_bind_warptimeline PUBLIC ${ROOT_DIR}/csrc/op_profiling)
if (DEFINED HITEST AND HITEST STREQUAL "ON")
    message(STATUS "HITEST is enabled. Skipping the alternative code block.")
else()
    add_subdirectory(warp_timeline_stub)
endif()
